@@ -52,6 +52,8 @@ Release 0.9.1
 - move cache admin page back into core, remove from zm_page_cache
 - remove most global statements!
 - make $zm_view and $zm_theme basic view variables, but not actual globals!
+- add support for generic getXXX()/setXXX()/isXXX() model methods via the
+  magic PHP5 method __call(..)
 
 Release 0.9.0
 - move cache manager page from core to zm_page_cache plugin
